--- a/src/index.css
+++ b/src/index.css
@@ -178,3 +178,173 @@ code {
   }
 
 }
+
+
+
+.navbar h1 {
+  color: black;
+  
+  
+}
+
+img.profileIMG{
+  
+  width:100px;
+  height:100px;
+  border-radius: 50%;
+}
+
+img.profileIMG:hover{
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+  width:105px;
+  height:105px;
+  background-color:ghostwhite;
+
+}
+
+.container .navContainer{
+  max-width: auto;
+ 
+  }
+  
+  /* .navbar .row{
+    width:auto;
+  }
+  
+  .navbar .card{
+    max-width:auto;
+  } */
+  
+  .navbar .booking{
+    width:auto;
+    margin-right: auto;
+    margin-left:0px;
+    display: flex; /*it means the items in div navbar are arranged in a row (default property) */
+    align-items: center;
+    max-width: auto;
+  }
+
+
+
+
+
+
+
+
+
+
+.MRList {  /*from MeetingRoomList.js*/
+  
+  display: flex; /*it means the items in div mrlist are arranged in a row (default property) */
+  
+  align-items: center;
+  max-width: auto;
+  max-height: 100%;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+  /*background-color: antiquewhite;*/
+}
+
+
+.mrContainer{
+  display:flex;
+  padding-top:5px;
+  padding-bottom:5px; 
+  width:100%;
+
+  align-items: center; 
+  justify-content: center; /*align the rows and cols in the centre*/
+} 
+
+
+
+.mrContainer .row{
+  width:100%; /* ROW IS EXACTLY THE SAME WIDTH AS CONTAINER*/
+  height:100%;
+}
+
+.mrContainer .col-4 {
+  width:100%;    /* 1st col IS EXACTLY THE SAME WIDTH AS row*/
+  height:100%;
+}
+
+.mrContainer .col-8 {
+  width:100%;    /* 2nd col IS EXACTLY THE SAME WIDTH AS row*/
+  height:100%;
+}
+
+/* .card-1 .card.Link :hover{
+  display:block;
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+} */
+
+
+ .card{
+  border-radius:12px;
+} 
+
+.card .nav-item{
+  font-Size:1.5em;
+}
+
+
+.card .card-link:hover{
+  
+  padding-top:10px;
+  padding-right:20px;
+  padding-bottom:10px;
+  padding-left:20px;
+  
+  background-color:ghostwhite;
+  
+  /* border:1px solid gray; */
+  border-Radius:6px;
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+ 
+
+
+@media (max-width: 1000px) {
+
+  .mrContainer .row{
+    flex-direction:column; /*when window size in minimized, make all the columns and hence cards appear one below the other*/
+
+    align-items: center; 
+    justify-content: center; /*align the rows and cols in the centre*/
+  } 
+
+ .mrContainer .col-4 {
+      min-height: 65%; 
+      height: 65%;
+      min-width:65%;
+      padding-bottom: 8%;
+      /* padding-left: 25%; */
+      /* justify-content: center; */
+      position: relative;
+    
+  }
+
+  .mrContainer .col-8 {
+    min-height: 65%;
+    height: 65%;
+    min-width:65%;
+    /* padding-left: 5%; */
+    /* justify-content: center; */
+    padding-bottom: 8%;
+    position: relative;
+    
+}
+
+  .card-2 {
+ width:50%;
+  
+}
+
+}  
+
+
+.mrContainer .list-group-flush{
+  width: 100%;
+  height:100%;
+}
