--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ code {
   font-size: 16px;
 }
 
-.SignInForm input[type="button"] {
+.SignInForm .button {
   background-color: #384C6E;
   border: none;
   border-radius: 20px;
@@ -128,11 +128,11 @@ code {
   cursor: pointer;
 }
 
-.SignInForm input[type="button"]:hover {
+.SignInForm .button:hover {
   background-color: #102446;
 }
 
-.SignInForm input[type="button"]:focus {
+.SignInForm .button:focus {
     outline: 0 !important;
 }
 
@@ -170,7 +170,14 @@ code {
     padding-bottom: 10px;
   }
 
-  .SignInForm input[type="button"] {
+  /* .SignInForm input[type="button"] {
+    width: 95%;
+    margin-bottom: 50px;
+    margin:20px;
+    display: block;
+  } */
+
+  .SignInForm button{
     width: 95%;
     margin-bottom: 50px;
     margin:20px;
@@ -178,6 +185,11 @@ code {
   }
 
 }
+
+
+
+
+
 
 
 
@@ -248,7 +260,7 @@ img.profileIMG:hover{
 
 .mrContainer{
   display:flex;
-  padding-top:5px;
+  padding-top:3px;
   padding-bottom:5px; 
   width:100%;
 
@@ -336,7 +348,7 @@ img.profileIMG:hover{
     
 }
 
-  .card-2 {
+  .card-mr, .card-ud {
  width:50%;
   
 }
@@ -347,4 +359,9 @@ img.profileIMG:hover{
 .mrContainer .list-group-flush{
   width: 100%;
   height:100%;
+}
+
+.user-pic{
+  width:200px;
+  height:300px;
 }
