--- a/src/index.css
+++ b/src/index.css
@@ -191,6 +191,7 @@ code {
 
 
 
+/**********************************************NAVBAR DETAILS********************************************/
 
 
 .navbar h1 {
@@ -219,13 +220,6 @@ img.profileIMG:hover{
  
   }
   
-  /* .navbar .row{
-    width:auto;
-  }
-  
-  .navbar .card{
-    max-width:auto;
-  } */
   
   .navbar .booking{
     width:auto;
@@ -238,7 +232,8 @@ img.profileIMG:hover{
 
   .navbar .booking h1{
     font-family: Helvetica;
-    color:#0a285a;
+    /* color:#0a285a; */
+    color:#0d3d56;
     
   }
 
@@ -249,7 +244,7 @@ img.profileIMG:hover{
 
 
 
-
+/**********************************************MEETING ROOM LIST DETAILS****************************************************/
 
 .MRList {  /*from MeetingRoomList.js*/
   
@@ -264,38 +259,35 @@ img.profileIMG:hover{
 }
 
 
-.mrContainer{
+.mrContainer, .mrContainer2{
   display:flex;
-  padding-top:0px;
+  padding-top:5px;
   padding-bottom:5px; 
   width:100%;
   
 
   align-items: center; 
   justify-content: center; /*align the rows and cols in the centre*/
+  background-image: url('./grey_background.jpg');
+  
 } 
 
 
 
-.mrContainer .row{
+.mrContainer, .mrContainer2 .row{
   width:100%; /* ROW IS EXACTLY THE SAME WIDTH AS CONTAINER*/
   height:100%;
 }
 
-.mrContainer .col-4 {
+.mrContainer, .mrContainer2 .col-4 {
   width:100%;    /* 1st col IS EXACTLY THE SAME WIDTH AS row*/
   height:100%;
 }
 
-.mrContainer .col-8 {
+.mrContainer, mrContainer2 .col-8 {
   width:100%;    /* 2nd col IS EXACTLY THE SAME WIDTH AS row*/
   height:100%;
 }
-
-/* .card-1 .card.Link :hover{
-  display:block;
-  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-} */
 
 
  .card{
@@ -310,8 +302,9 @@ img.profileIMG:hover{
 
 
 .card-1 .card-link{
-
-  color:#2454a7;
+  
+  /* color:#0d3d56; */
+  color:#3C99DC;
   font-family: Helvetica;
 
 }
@@ -322,18 +315,21 @@ img.profileIMG:hover{
   padding-right:20px;
   padding-bottom:10px;
   padding-left:20px;
-  color:#384C6E;
+  color:#3c6478;
   
   background-color:ghostwhite;
   
   /* border:1px solid gray; */
   border-Radius:6px;
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+
+
 }
 
  
 .tab-mr .nav-link{
-  color:#2454a7;
+  /* color:#52bbec; */
+  color:#3C99DC;
   font-family: Helvetica;
 }
 
@@ -343,23 +339,16 @@ img.profileIMG:hover{
 }
 
 
-
-/* .card-mr h2{
-  text-align: center;
-  color:rgb(71, 68, 68);
-  font-family: Helvetica;
-} */
-
 @media (max-width: 1000px) {
 
-  .mrContainer .row{
+  .mrContainer, .mrContainer2 .row{
     flex-direction:column; /*when window size in minimized, make all the columns and hence cards appear one below the other*/
 
     align-items: center; 
     justify-content: center; /*align the rows and cols in the centre*/
   } 
 
- .mrContainer .col-4 {
+ .mrContainer, .mrContainer2 .col-4 {
       min-height: 65%; 
       height: 65%;
       min-width:65%;
@@ -367,6 +356,8 @@ img.profileIMG:hover{
       /* padding-left: 25%; */
       /* justify-content: center; */
       position: relative;
+
+
     
   }
 
@@ -381,31 +372,32 @@ img.profileIMG:hover{
     
 }
 
-  .tab-mr, .card-ud {
- width:50%;
+
+.mrContainer2 .col-8 {
+  min-height: 65%;
+  height: 65%;
+  min-width:85%;
+  /* padding-left: 5%; */
+  /* justify-content: center; */
+  padding-bottom: 8%;
+  position: relative;
   
 }
 
-/* .card-booked .table{
-  flex-direction: column;
-  width:100%;
-  height:100%;
-} */
+
+  .tab-mr, .card-ud{
+ width:50%;
+}
+
+
 
 }  
 
 
-.mrContainer .list-group-flush{
-  width: 100%;
-  height:100%;
-}
 
+
+/******************************************uSER DETAILS PAGE***************************************************/
 .user-pic{
   width:200px;
   height:300px;
 }
-/* 
-.Sidebar-class .Card .card-body{
-  font-size: 12em;
-  font-family: 'Lucida Sans';
-} */
