--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ code {
 
 .SignInForm input[type=text]{
   width: 95%;
-  height: 65px;
+  height: 55px;
   border: 2px solid #000;
   border-radius: 0px;
   margin-bottom: 30px;
@@ -45,7 +45,7 @@ code {
 
 .SignInForm input[type=password]{
   width: 95%;
-  height: 65px;
+  height: 55px;
   border: 2px solid #000;
   border-radius: 0px;
   margin-bottom: 1px;
@@ -292,6 +292,11 @@ img.profileIMG{
 
 /******************************************* MEETING ROOM DISPLAY *******************************************/
 
+.containerUser .container-fluid{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
 .MRList {  /*from MeetingRoomList.js*/
   
   display: flex; /*it means the items in div mrlist are arranged in a row (default property) */
@@ -513,11 +518,12 @@ img.profileIMG{
 } */
 
 /******************************************* TABLE *******************************************/
-table {
+.table {
   border-collapse: separate;
   border-spacing: 0;
   min-width: 350px;
   background-color: #fff;
+  
 }
 /*table tr th,
 table tr td {
